Port core machines to Forge 1.20.1